Applying Array Modifier corrupt mesh #46455

Closed
opened 2015-10-12 15:48:28 +02:00 by Lee June · 13 comments

System Information
Win7 sp1 64bits, win 10 64 bits

Blender Version
Broken: official 274, 275a, 276
Worked: 249(Yeah, it is 249)

open my "bug.blend", select "Cylinder.001", press TAB into edit mode, press X to delete, then choose Vertices from the popup menu. Congratulates! Blender crashes immediately.

the file can be downloaded at
bug.zip
or
http://bbs.blendercn.org/forum.php?mod=attachment&aid=NjQxMXwxODQ4Yzc0Y3wxNDQ0NjU1NzIzfDE4fDI5NjQ%3D

thanks

**System Information** Win7 sp1 64bits, win 10 64 bits **Blender Version** Broken: official 274, 275a, 276 Worked: 249(Yeah, it is 249) open my "bug.blend", select "Cylinder.001", press TAB into edit mode, press X to delete, then choose Vertices from the popup menu. Congratulates! Blender crashes immediately. the file can be downloaded at [bug.zip](https://archive.blender.org/developer/F244472/bug.zip) or http://bbs.blendercn.org/forum.php?mod=attachment&aid=NjQxMXwxODQ4Yzc0Y3wxNDQ0NjU1NzIzfDE4fDI5NjQ%3D thanks
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @retsyo

Added subscriber: @retsyo

#46690 was marked as duplicate of this issue

#46690 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Crash confirmed, but the mesh is corrupted (tons of errors in verts usage by polygons, at least). Select your object and (still in Object mode) run C.object.data.validate(True) in python console, it will fix it and report all errors in OS console.

Now, what we need is to know how to reproduce such corruption, that’s the real bug, otherwise we cannot do anything.

Crash confirmed, but the mesh is corrupted (tons of errors in verts usage by polygons, at least). Select your object and (still in Object mode) run `C.object.data.validate(True)` in python console, it will fix it and report all errors in OS console. Now, what we need is to know **how** to reproduce such corruption, that’s the real bug, otherwise we cannot do anything.
Author

so nice, I found my file before applying modifier
to reproduce this, please follow these steps:

  1. select "Cylinder.001", apply the 'array modifier'.
  2. delete the 'curve modifier' which I mean to use later
  3. goto edit mode
  4. press X and choose 'vertices'

Before any operation, you may notice that the Cylinder.001 has a strange top. Maybe this causes the later crashes. As for this strange top, perhaps my beziercurve is the root.

bug2220.zip

so nice, I found my file before applying modifier to reproduce this, please follow these steps: 1. select "Cylinder.001", apply the 'array modifier'. 2. delete the 'curve modifier' which I mean to use later 3. goto edit mode 4. press X and choose 'vertices' Before any operation, you may notice that the Cylinder.001 has a strange top. Maybe this causes the later crashes. As for this strange top, perhaps my beziercurve is the root. [bug2220.zip](https://archive.blender.org/developer/F244496/bug2220.zip)
Author

In #46455#340984, @mont29 wrote:
Crash confirmed, but the mesh is corrupted (tons of errors in verts usage by polygons, at least). Select your object and (still in Object mode) run C.object.data.validate(True) in python console, it will fix it and report all errors in OS console.

Now, what we need is to know how to reproduce such corruption, that’s the real bug, otherwise we cannot do anything.

but 249 does not crash

> In #46455#340984, @mont29 wrote: > Crash confirmed, but the mesh is corrupted (tons of errors in verts usage by polygons, at least). Select your object and (still in Object mode) run `C.object.data.validate(True)` in python console, it will fix it and report all errors in OS console. > > Now, what we need is to know **how** to reproduce such corruption, that’s the real bug, otherwise we cannot do anything. but 249 does not crash

Well, 2.49 as pretty much nothing to see with current blender really, mesh handling is totally different now with BMesh, etc.

Anyway, can confirm the issue, mesh is valid before applying array modifier, after it becomes invalid - and this also happen after save & reload with current master (i.e. with a modern .blend file)…

Well, 2.49 as pretty much nothing to see with current blender really, mesh handling is totally different now with BMesh, etc. Anyway, can confirm the issue, mesh is valid before applying array modifier, after it becomes invalid - and this also happen after save & reload with current master (i.e. with a modern .blend file)…
Bastien Montagne changed title from delete operation crashes 274/275a/276 to Applying Array Modifier corrupt mesh 2015-10-12 19:40:22 +02:00

Added subscriber: @midan-3

Added subscriber: @midan-3

I do not have the crash in blender 2.70a on win xp 32

I do not have the crash in blender 2.70a on win xp 32
Added subscribers: @OliverBurn, @ideasman42, @mib2berlin, @SuriyanTanthai, @PatriceBertrand
Bastien Montagne self-assigned this 2016-01-30 17:11:49 +01:00

This issue was referenced by eed9c6fdcf

This issue was referenced by eed9c6fdcf38664d90aea0d50e7c496753089831

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46455
No description provided.